crates/openracing-plugin-abi/tests/snapshots/snapshot_tests__wasm_validation_snapshots__missing_required_exports.snap
---
source: crates/openracing-plugin-abi/tests/snapshot_tests.rs
expression: "format!(\"{:?}\", missing)"
---
["process", "memory"]
