crates/openracing-plugin-abi/tests/snapshots/snapshot_tests__wasm_validation_snapshots__valid_all_exports.snap
---
source: crates/openracing-plugin-abi/tests/snapshot_tests.rs
expression: "format!(\"{:#?}\", validation)"
---
WasmExportValidation {
    has_process: true,
    has_memory: true,
    has_init: true,
    has_shutdown: true,
    has_get_info: true,
}
